fix: increase contrast for links in registry

--- a/assets/scss/_registry.scss
+++ b/assets/scss/_registry.scss
@@ -39,3 +39,7 @@
 .registry-entry {
   @extend .shadow;
 }
+
+a {
+  color: darken($link-color, 15%);
+}
